# autoposter-AI

./: .env.example  .gitignore  .gitleaks.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_add_ab_arm.py  0002_follower_snapshots.py  0002b_follower_snapshots.py  0003_variant_retry_fields.py
backend/app/: __init__.py  config.py  errors.py  main.py  observability.py  schemas.py  security.py
backend/app/agents/: __init__.py  analyst.py  planner.py  targets.py
backend/app/ai/: __init__.py  content.py  image.py  vision.py  website_import.py
backend/app/api/: __init__.py  ab_tests.py  analytics.py  auth.py  business_profile.py  calendar_ics.py  dashboard.py  feedback.py  followers.py  health.py  humanizer.py  linkedin_oauth.py  media.py  meta_oauth.py  plans.py  platform_credentials.py  posts.py  targets.py
backend/app/db/: __init__.py  models.py  session.py
backend/scripts/: encrypt_legacy_tokens.py
backend/tests/: conftest.py  test_ab_tests.py  test_analyst_flow.py  test_api_smoke.py  test_calendar_ics.py  test_dashboard_overview.py  test_fb_not_a_member.py  test_followers.py  test_humanizer.py  test_linkedin.py  test_media.py  test_meta_platforms.py  test_phase1_reliability.py  test_phase2_security_ops.py  test_phase3_resilience.py  test_phase4_alembic.py  test_phase6b_retry_exceptions.py  test_planner.py  test_review_fixes.py  test_review_flow.py  test_security_and_ops.py  test_targets_agent.py  test_token_refresh.py
docs/: BAN_FAQ.md  (+4 more)
(+59 files in other folders)
